--- a/src/main/resources/templates/DishesAddList.html
+++ b/src/main/resources/templates/DishesAddList.html
@@ -10,7 +10,7 @@
 
     <div class="main-container">
         <div class="login-form-wrap">
-            <div class="form-title ">Введите данные</div>
+            <div class="row justify-content-center alert alert-danger">Введите данные</div>
             <form class="container center_div login-form" th:action="@{/dishesAdd}" method="post">
                 <div class="form-group">
                     <label for="name">Название</label>
