--- a/src/main/resources/templates/RecipeCountList.html
+++ b/src/main/resources/templates/RecipeCountList.html
@@ -8,18 +8,21 @@
 <body>
     <th:block th:insert="fragments/navBar.html :: navBar"/>
 
-    <div class="row justify-content-center  p-2	">Введите колличество продуктов
-        please...
+    <div class="row justify-content-center  p-2	">Укажите название рецепта и колличество продуктов.
     </div>
 
     <form th:action="@{/recipe/add}" method="GET">
-        <div class="form-group">
-            <label for="nameRecipe">Введите название рецепта</label>
-            <input class="form-control" id="nameRecipe" type="text" name="nameRecipe"/>
+        <div class="row justify-content-center  p-1">
+            <div class="col-sm  p-1 justify-content-end" style="text-align: right"
+            >Название:
+            </div>
+            <div class="col-sm  p-1">
+                <input id="nameRecipe" type="text" name="nameRecipe"/>
+            </div>
         </div>
         <div class="row justify-content-center  p-1">
             <div class="col-sm  p-1 justify-content-end"
-                 style="text-align: right">Какое колличество продуктов будет в рецепте :
+                 style="text-align: right">Колличество продуктов в рецепте:
             </div>
             <div class="col-sm  p-1">
                 <input type="number" name="count"/>
