--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -20,6 +20,9 @@
                 <a class="nav-link" href="/recipe/counting"> Добавить рецепт </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/recipe/list"> Список рецептов </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/">Сколько и в каких колличествах блюд можно приготовить </a>
             </li>
 
