--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="/recipe/list"> Список рецептов </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/">Сколько и в каких колличествах блюд можно приготовить </a>
+                <a class="nav-link" href="/recipe/canCook/list">Сколько и в каких колличествах блюд можно приготовить </a>
             </li>
 
         </div>
