--- a/src/main/resources/templates/RecipeCountList.html
+++ b/src/main/resources/templates/RecipeCountList.html
@@ -7,10 +7,8 @@
 </head>
 <body>
     <th:block th:insert="fragments/navBar.html :: navBar"/>
-
-    <div class="row justify-content-center  p-2	">Укажите название рецепта и колличество продуктов.
+    <div class="row justify-content-center alert alert-danger">Укажите название рецепта и колличество продуктов.
     </div>
-
     <form th:action="@{/recipe/add}" method="GET">
         <div class="row justify-content-center  p-1">
             <div class="col-sm  p-1 justify-content-end" style="text-align: right"
@@ -28,13 +26,10 @@
                 <input type="number" name="count"/>
             </div>
         </div>
-
         <div class="row justify-content-center  p-1">
             <input class="btn btn-primary" type="submit" value="Создать рецепт"/>
         </div>
     </form>
-
-
     <th:block th:insert="fragments/scripts.html :: js"/>
 </body>
 </html>
