--- a/src/main/resources/templates/RecipeList.html
+++ b/src/main/resources/templates/RecipeList.html
@@ -15,23 +15,19 @@
                 <tr>
                     <th scope="col">Номер рецепта</th>
                     <th scope="col">Название</th>
-                    <th scope="col">Просмотр или изменение рецепта</th>
+                    <th scope="col">Изменение рецепта</th>
                 </tr>
                 </thead>
-
                 <tr th:each="recipe : ${recipesList}">
-                    <!--                    <td><img th:src="@{/recipe/{uid}/img(uid=${recipe.id})}" width="100"-->
-                    <!--                             height="100" alt=""></td>-->
-                    <td th:text="${recipe.id}"/>
-                    <td th:text="${recipe.nameRecipe}"/>
-                    <!--                    <td th:action="@{/patient/{uid}/discharges (uid=${user.id})}" />-->
-                    <!--                    <form method="POST" enctype="multipart/form-data"-->
-                    <!--                          th:action="@{/patient/{uid}/discharges (uid=${user.id})}">-->
-                    <!--                        <td>-->
-                    <!--                            <input class="btn btn-outline-success btn-sm" type="submit"-->
-                    <!--                                   th:value="#{label.discharges.write.out}"/>-->
-                    <!--                        </td>-->
-                    <!--                    </form>-->
+                    <form method="get" enctype="multipart/form-data"
+                          th:action="@{/recipe/edit/{uid} (uid=${recipe.id})}">
+                        <td th:text="${recipe.id}"/>
+                        <td th:text="${recipe.nameRecipe}"/>
+                        <td>
+                            <input class="btn btn-outline-success btn-sm" type="submit"
+                                   th:value="Изементь"/>
+                        </td>
+                    </form>
                 </tr>
             </table>
             <div th:if="${totalPages > 1}">
@@ -57,22 +53,9 @@
                         <span th:unless="${currentPage < totalPages}">Last</span>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
-    <!--    <form th:action="@{/recipe/edit}" method="GET">-->
-    <!--        <ol class="rounded">-->
-    <!--            <li><a href="#">Элемент списка</a></li>-->
-    <!--            <li><a href="#">Элемент списка</a></li>-->
-    <!--            <li><a href="#">Элемент списка</a></li>-->
-    <!--            <li><a href="#">Элемент списка</a></li>-->
-    <!--            <li><a href="#">Элемент списка</a></li>-->
-    <!--        </ol>-->
-
-    <!--    </form>-->
-
-
     <th:block th:insert="fragments/scripts.html :: js"/>
 </body>
 </html>
