--- a/src/main/resources/templates/recipeCanCookList.html
+++ b/src/main/resources/templates/recipeCanCookList.html
@@ -9,58 +9,46 @@
     <th:block th:insert="fragments/navBar.html :: navBar"/>
 
     <div class="main container">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">Номер</th>
-                <th scope="col">Название</th>
-                <th scope="col">Продукты</th>
-                <th scope="col">Колличество блюд которое можно готовить</th>
-                <th scope="col">готовить</th>
-
-            </tr>
-            </thead>
-            <tr th:each="recepie : ${recipeDtoList}">
-                <form method="POST" enctype="multipart/form-data"
-                    th:action="@{/recipe/cook/}">
-                <td th:text="${recepie.idRecipe}"/>
-                <td th:text="${recepie.nameRecipe}"/>
-
-                <td class="btn-group dropleft">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                        смотреть
-                    </button>
-                    <div class="dropdown-menu">
-                        <div th:each="recepieListPr : ${recepie.getRecipeList()}">
-                            <a class="dropdown-item" th:text="${recepieListPr.name}"> </a>
+        <div class="starter-template text py-5 px-3">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Номер</th>
+                    <th scope="col">Название</th>
+                    <th scope="col">Колличество блюд которое можно готовить</th>
+                    <th scope="col">готовить</th>
+                    <th></th>
+                    <th scope="col">Продукты</th>
+                </tr>
+                </thead>
+                <tr th:each="recepie : ${recipeDtoList}">
+                    <form method="POST" enctype="multipart/form-data"
+                          th:action="@{/recipe/cook/}">
+                        <td th:text="${recepie.idRecipe}"/>
+                        <td th:text="${recepie.nameRecipe}"/>
+                        <td th:text="${recepie.countDish}"/>
+                        <td>
+                            <input class="btn btn-outline-success btn-sm" type="submit" th:value="Готовить"/>
+                        </td>
+                        <td style="overflow:visible"
+                            th:each="recepieListPr : ${recepie.getRecipeList()}">
+                            <li class="list-group-item" th:text="${recepieListPr.name}"></li>
                             вес
-                            <a class="dropdown-item" th:text="${recepieListPr.weight}"> </a>
+                            <li class="list-group-item" th:text="${recepieListPr.weight}"></li>
                             калории
-                            <a class="dropdown-item" th:text="${recepieListPr.calories}"> </a>
+                            <li class="list-group-item" th:text="${recepieListPr.calories}"></li>
                             жиры
-                            <a class="dropdown-item" th:text="${recepieListPr.fats}"> </a>
+                            <li class="list-group-item" th:text="${recepieListPr.fats}"></li>
                             белки
-                            <a class="dropdown-item" th:text="${recepieListPr.proteins}"> </a>
+                            <li class="list-group-item" th:text="${recepieListPr.proteins}"></li>
                             углеводы
-                            <a class="dropdown-item" th:text="${recepieListPr.carbohydrates}"> </a>
-                        </div>
-                    </div>
-                </td>
-                    <td>
-                    <td>
-                        <input class="btn btn-outline-success btn-sm" type="submit" th:value="Готовить"/>
-                    </td>
-                    </td>
-
-
-
-                <td th:text="${recepie.countDish}"/>
-                </form>
-                <th:block th:insert="fragments/scripts.html :: js"/>
-            </tr>
-        </table>
+                            <li class="list-group-item" th:text="${recepieListPr.carbohydrates}"></li>
+                        </td>
+                    </form>
+            </table>
+        </div>
     </div>
-
+    <th:block th:insert="fragments/scripts.html :: js"/>
+    </ul>
 </body>
 </html>
